samples/_failures_safe/1761460035_84235f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27b74437.c: In function ‘main’:
./samples/SAFE/__tmp_27b74437.c:149:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  149 |     int filter_level
      |     ^~~
./samples/SAFE/__tmp_27b74437.c:149:5: error: expected declaration or statement at end of input
